tests/e2e/inline_service_output2.error
Error: syntax error in story at line 1, column 24

1|    a = (listen command as client)
                             ^^^^^^

E0109: Inline service calls can't define an output
