tests/e2e/inline_service_output2.story
a = (listen command as client)
